feature-flagg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feature-flagg
spec:
  type: ClusterIP
  selector:
    app: feature-flagg
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
